move design pattern to gitbook

--- a/_posts/2015-12-12-book.md
+++ b/_posts/2015-12-12-book.md
@@ -10,3 +10,5 @@ istop : true
 ---
 
 - [Luminus手册](https://www.gitbook.com/book/ivaneye/luminus-reference/details)
+
+- [语言与模式](https://www.gitbook.com/book/ivaneye/design-pattern/details)
