--- a/_posts/think/2015-12-13-my-writer.md
+++ b/_posts/think/2015-12-13-my-writer.md
@@ -5,5 +5,33 @@ categories: [think]
 tags: [think,随笔]
 avatarimg: "/img/head.jpg"
 author: Ivan
+published: false
 
 ---
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 历程
+## Iteye
+- 编辑器太挫
+## WordPress
+- 写作外要关心的杂事太多
+## GithubPage
+- 速度太慢
+- GFW
+- 屏蔽百度爬虫
+# 期望
+## 写作方式
+## 保存方式
+## 发布模式
+# 现状
