--- a/source/_posts/tech/opensource/jfinal/2015-12-24-jfinal.md
+++ b/source/_posts/tech/opensource/jfinal/2015-12-24-jfinal.md
@@ -191,3 +191,19 @@ static void configJFinal(JFinalConfig jfinalConfig) {
 
  - 3处，初始化Handler，其实就是将上面构建的actionMapping传递给Handler，供后面请求调用时使用。其核心方法为handler，就是根据请求从actionMapping中获取Action执行。
  按照前面组装好的顺序执行拦截器和方法！典型的职责链模式！这里的拦截器实现和Filter很类似，不像SpringMVC中的拦截器，有before,after,around之分。这里的拦截器只有一个方法intercept。那么要实现调用和返回同时拦截，就需要在代码里实现了！
+
+ ```java
+intercept(){
+    //dosomething before
+    nextInterceptor.intercept();
+    //dosomething after    
+}
+ ```
+
+ - 4处，初始化Render，实际用Class加载了对应的类，如果没有，用catch吞掉了异常
+
+ - 5处,初始化文件上传
+
+ - 6处，初始化Token
+
+ 初始化这些内容后就是等待请求，根据请求进行相应处理了!
