--- a/source/_posts/2015-12-12-book.md
+++ b/source/_posts/2015-12-12-book.md
@@ -4,7 +4,7 @@ title: My GitBook
 categories: [book]
 tags: [book,index]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 istop : true
 
 ---
