--- a/source/_posts/read/2015-04-18-index.md
+++ b/source/_posts/read/2015-04-18-index.md
@@ -4,7 +4,7 @@ title: 书单
 categories: [book]
 tags: [book,index]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 istop :  true
 published: false
 
