--- a/source/_posts/tech/language/how/language/go/2015-12-01-go-basic.md
+++ b/source/_posts/tech/language/how/language/go/2015-12-01-go-basic.md
@@ -4,7 +4,7 @@ title: Go环境与语法
 categories: train
 tags: [how,language,go]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 
 ---
