--- a/source/_posts/tech/language/how/language/java/2015-11-07-java-oo.md
+++ b/source/_posts/tech/language/how/language/java/2015-11-07-java-oo.md
@@ -4,7 +4,7 @@ title: 面向对象思想-Java
 categories: train
 tags: [how,language,java]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 
 ---
