--- a/source/_posts/tech/mycode/2015-06-07-cdraw.md
+++ b/source/_posts/tech/mycode/2015-06-07-cdraw.md
@@ -4,8 +4,8 @@ title: Clojure绘制UML
 categories: [mycode]
 tags: [clojure,graphviz,cdraw]
 avatarimg: "/img/head.jpg"
-author: Ivan
-author: Ivan
+author: wangyifan
+author: wangyifan
 
 ---
 
