--- a/source/_posts/tech/opensource/jfinal/2015-12-24-jfinal.md
+++ b/source/_posts/tech/opensource/jfinal/2015-12-24-jfinal.md
@@ -4,7 +4,7 @@ title: JFinal源码阅读
 categories: [architecture]
 tags: [architecture,rpc,distributed]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 
 ---
