--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -4,7 +4,7 @@ title: 我所期望的写作模式
 categories: [think]
 tags: [think,随笔]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 
 ---
