--- a/source/_posts/tech/code/2015-04-23-proxy.md
+++ b/source/_posts/tech/code/2015-04-23-proxy.md
@@ -4,7 +4,7 @@ title: Java Socket编程中加入代理
 categories: code
 tags: [java,proxy]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 
 ---
 
