--- a/source/_posts/tech/language/clojure/clojure/2014-10-01-dsl.md
+++ b/source/_posts/tech/language/clojure/clojure/2014-10-01-dsl.md
@@ -4,7 +4,7 @@ title: Clojure进阶:使用Clojure构建DSL
 categories: clojure
 tags: [clojure]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 
 ---
 
