--- a/source/_posts/tech/language/java/design/2015-05-10-plantuml.md
+++ b/source/_posts/tech/language/java/design/2015-05-10-plantuml.md
@@ -4,7 +4,7 @@ title:  课程登记系统设计
 categories: [book]
 tags: [book,review]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 ---
 
