--- a/source/_posts/tech/opensource/jdk/2015-06-08-io.md
+++ b/source/_posts/tech/opensource/jdk/2015-06-08-io.md
@@ -4,7 +4,7 @@ title: Java IO
 categories: [jdk]
 tags: [opensource,jdk,java]
 avatarimg: "/img/head.jpg"
-author: Ivan
+author: wangyifan
 published: false
 ---
 
