--- a/source/_posts/think/2016-04-08-tools.md
+++ b/source/_posts/think/2016-04-08-tools.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 开放性工具---我的工具选择之路
+title: 从用户体验角度看工具
 categories: [think]
 tags: [think,随笔]
 avatarimg: "/img/head.jpg"
@@ -8,121 +8,204 @@ author: wangyifan
 
 ---
 
-# 软件控
+# 用户体验
 
-从刚接触电脑开始，我就比较喜欢捣鼓各种软件，一个个的安装，使用，卸载！至今我也记不清自己用过多少软件了。所幸我捣鼓的是软件，没捣鼓单反什么的！不过时间倒是花费了不少，当时桌面软件还是主流，各种软件评论横飞，在安装软件前，我都会花时间先看看评论，再安装试用，本意是想节约点安装卸载时间，后来发现，网上的评论其实对自己的帮助并不大。因为最后我选择的软件都是些“非主流”软件！
+作为互联网从业人员，经常会接触到“用户体验”这个词！
+我们可能为了一个菜单该放在哪里而争论，或一边苦逼的编码一边骂着SB产品经理！
+我们为别人考虑着“用户体验”，但是对自己一直在用的软件，为什么却这么将就呢？
 
-工作后，需要一些专业性的软件，我又花了很长时间去试用各种软件！最终，又再一次，我用了不少“非主流”软件。
+# 软件=工具
 
-我花这么多时间在工具上，是因为我相信，**正确的使用好工具**,可以极大的提高效率。无奈好的软件太少，垃圾软件太多！
+作为软件开发人员，使用的软件不在少数，我们都称为工具。即为工具，我们好像就不那么纠结难不难用了！好像工具就应该比较难用才对！
 
-![](file/tools_01.jpg)
+现在，我们从用户体验的角度重新审视下我们常用的工具！
 
-# 选择工具的标准
+# 简单
 
-在选择工具的同时，我也总结了个人选择工具的标准！
+在做软件的时候，我们知道要把用户当作“白痴”来看待！要尽可能的把功能做简单，能一步完成的绝对不能分成两步。所以软件要做得足够的简单。但是简单并不代表功能上的简单，比如说Windows下的记事本，那叫简陋！对于工具型软件来说，“简单”有三个层面上的意思：
 
-- 足够简单
-- 不限制思考
-- 跨平台[全平台]
-- 颜值
+## 功能够用
 
-## 足够简单
+软件功能应该也适用28原则，即在使用软件的大部分(80%，甚至更多)情况下，只会使用很少(20%，甚至更少)的功能。所以软件没必要太多的功能。只要有足够的核心功能即可。过多的功能只会增加软件的复杂度和学习成本。
 
-我说的简单是在操作上的简易性和符合直觉，也就是说，我在拿到软件后，不需要任何的使用说明，靠猜就能入门！如果一上手就让人摸不着头脑，我基本会放弃！比较极端的例子就是Vim：一个没用过Vim的人，第一次用，是完全不知道怎么用的！我现在用Vim的原因就是，Linux默认安装vi！
+一个很典型的例子就是Office。Office功能很强大，但是大家大部分情况下会用到它多少功能？有5%吗？而且，你会发现，你需要的功能消失在了它的菜单列表里了！
 
-## 不限制思考
+现在再看Word的工具栏，是什么感觉？
 
-我现在从事的是互联网行业，在前面《人件》的书评中已经提过了，是个“非高科技脑力劳动者”！所以工具需要能帮助思考，而不是限制思考！
+![](/assets/think/tools/tools_03.jpg)
 
-## 跨平台/全平台
+<!-- more -->
 
-这个不用说了，现在谁没多个电子设备！为了方便的在多个设备上切换，需要软件能跨平台，最好是全平台！
+## 操作简单
 
-## 颜值
+在功能的基础上，软件还需要操作简单。工具是为了提高效率的，太复杂的操作会间接的降低效率。比如：你本来就是为了编辑点文本，但是得花半年甚至更多时间去学习编辑工具。等你学完了，黄花菜都凉了。(大家应该知道我在黑什么吧～)
 
-好吧，我是个颜控！毕竟以后要一直看的，当然越好看越好，你总不会选个董明珠壁纸吧～
+## 符合直觉
 
-# 艰难软件选择路
+符合直觉就是说，当你刚接触一个软件的时候，可以靠猜或者随便点点就能掌握基本的功能！
 
-这里我列出在工作中所需要的软件，以及我的选择和原因！
+典型的反面例子就是Vim!当一个完全没接触过Vim的人，打开Vim，三秒钟就懵逼了!怎么输入？怎么保存？怎么退出？目前我使用Vi的原因是Vi是Linux默认安装的文本编辑器，还有一个原因就是Vim打开大文件速度很快！
 
-## IDE
+有人会说，Vim的编辑效率很高，各种奇技淫巧！然并卵，这个下面再说！
 
-上面已经说了，我是互联网行业，需要Coding!首当其冲需要个称手的“兵器”！我主力开发语言是Java,Java IDE就这么几种:
+# Markdown三分钟入门
 
-- eclipse
-- Netbeans
-- Intellij IDEA
+Markdown就是一个很简单的工具！
 
-一开始学Java，随大流的用了eclipse，因为各种教材都是基于eclipse的，即使是现在很多的教材都还是在使用eclipse!当时还是07年左右，eclipse是3吧！各种莫名其妙的crash!严重的影响我的Coding心情！于是决定选择替代品！就有了Neteans和Intellij IDEA，其实我还用过JBuilder,JCreator等软件，不过用得不多，因为我已经找到了我要的工具：Intellij IDEA!
+文件名以md结尾
 
-先使用的是Netbeans，毕竟是官方出品！第一印象就是界面比较搓！打开文件时，中文无法显示，网上说需要添加参数！而且字体显示太垃圾了(后来好了)，简直就是毁眼睛！
+|语法|说明|
+|---|---|
+|# title|标题，一个#号代表一个级别|
+|- text|列表|
+|1. text|还是列表|
+|\[text\](url)|链接|
+|\!\[\](img-url)|图片|
+|> text|引用|
+|\*斜体\*|*斜体*|
+|\*\*粗体\*\*|**粗体**|
+|```|代码|
 
-然后用了Intellij IDEA，好像是IDEA7，一开始也挺难用的，我基本花了一个星期才入门！从这一点看，它其实并不太符合我选择软件的标准！不过用它写代码，实在是太TM爽了！各种智能提示：你想什么，它就给你什么！这才是一个工具该做的事情，帮你实现你的想法！自此，我的IDE就一直是IDEA！
+# Pandoc三十秒入门
 
-## 编辑器
+Markdown负责内容，Pandoc则负责展示！Pandoc是个牛逼的格式转换工具！能转换下图展示的类型!
 
-怎么说IDE都太重了，如果只是想写个demo，那么开个IDE就有点大才小用了，或者要记录一些文字什么的，还是使用编辑器方便得多！
+![](/assets/think/tools/tools_pandoc.jpg)
 
-相比于IDE,编辑器就是多到眼花缭乱了！
+比如你想把Markdown转换成Word
 
-- ULtraEdit
-- EditPlus
-- Notepad++
-- Vim
-- Emacs
-- SublimeText
-- Atom
+```
+pandoc source.md -o target.docx
+```
 
-同样，我最先使用的是ULtraEdit，评论是二进制操作很牛逼！后来发现，自己基本用不上二进制操作，而且启动速度还很慢。就换成了EditPlus,优点就是秒开！再后来就是NotePad++,不过只能在Win下使用，所以也放弃了！
+如果我想把Markdown转换成epub,html呢？
 
-后来就开始纠结Vim和Emacs了，网上的评论一堆一堆的！各有支持者，搞得我也很纠结！后来我两个都用了，现在Vim主要用来编辑服务器配置文件，Emacs已放弃！
+# 跨平台/全平台
 
-现在看来，其实这两个“神器”都不符合我的要求！
+做前端的同学深有体会，各种浏览器兼容性问题！但是为了用户能在各个浏览器上看到一样的效果，还是忍了！
 
-- 足够简单：看下Vim和Emacs的学习曲线吧！
-![](file/tools_02.jpg)
-- 不限制思考：两个工具都是脑细胞杀手，你得先耗死几亿脑细胞去熟练掌握它们的操作！否则，你在使用它们的时候，思路会不时的被打断：这个操作的快捷键是什么？
-- 跨平台[全平台]：这个算合格吧！不过对于Vim来说，GVim和Vim有些快捷键是不一样的，对于一个以全键盘为荣的软件，平台间的命令不同，让使用者情何以堪呢？！
-- 颜值：和现代编辑器相比，默认界面完全称不上有颜值！当然得益于其可配置性，可配置出比较炫的界面！不过有些硬伤，是配置无法弥补的！比如：现代编辑器都默认有的目录树，Vim和Emacs都需要使用插件+配置来实现！且是以划分区域的形式实现，感觉非常的怪异！
+我们用的工具也一样。一般我们会在Windows或者Mac上开发，而部署都是在Linux上！所以我们当然希望能有工具既能在Windows上运行，也能在Mac和Linux上运行。当然功能和使用感受要完全相同。
 
-后来用了SublimeText,不过要收费！对于一个软件开发者，用盗版还是心里过意不去的！
+比如，Notepad++,ULtraEdit,EditPlus,Office是在Windows上接受度比较高的编辑类软件，TextMate是Mac上很知名的编辑器。但是一出这个系统，你就用不了了，就得花时间再去学另一个软件，也是一种浪费！
 
-还好有了Atom!虽然启动速度慢了一点，不过使用简单，插件安装方便，且牛逼插件不少！比如TypeScript插件，Golang插件，还有装逼利器，activate-power-mode和atom-miku!由于Atom是基于浏览器的，所以全平台可用！还有Github这个强大的社区支持！没理由不用！唯一的缺点是启动速度慢了点，但是能忍受，还是比IDE快不少的！
+# 颜值
 
-## 开发语言
+好看这个东西，见仁见智！自己觉得好看就行了！比起意淫用户喜欢什么样的配色、布局、字体！自己喜欢什么样的配色、布局、字体，应该很简单吧？比如，我就比较偏爱暗色系的主题！
 
-工作中，需要使用Java语言！Java是个合格的工程语言，但是对个人来说并不是个好语言！
+当初NetBeans就是因为颜值太差，被我抛弃了～
 
-很显著的问题就是，它限制了思考！使用Java只能使用面向对象思维来思考,另一方面，Java对面向对象思想的支持其实并不好！例如：现有对象，在不修改代码的情况下，无法方便的添加行为！这就是Java里有那么多的Util类的原因！
+现在来看Vim和Emacs，颜值也是比较差的。不过两者的定制化比较高，可以按自己的需求来配置。不过由于历史遗留问题，有些功能靠配置是没法解决的。比如说，现在编辑器里都默认自带的目录树和页签。Vim和Emacs都是模拟出来的，看起来很不协调！
 
-我了解的语言不少，不过除了Java，其它语言都可以说只是了解！
+![](/assets/think/tools/tools_vim.png)
 
-- Java
-- Kotlin
-- Clojure
-- Golang
-- JavaScript
+![](/assets/think/tools/tools_emacs.jpg)
 
-今年主要关注Golang,因为需要研究Docker!Golang的路径管理挺别扭，需要设置一个Path作为工作路径！如果要在多个路径下进行开发，需要将所有路径都配置到Path里！而个人目前其实最偏向的是Clojure!因为够自由！
+有人可能觉得颜值不重要！你可以把下面的图片设为背景，干一天活试试～
 
-## 知识整理
+![](/assets/think/tools/tools_04.jpg)
 
-对知识的学习和积累才能成长，所以一个好的知识记录与整理工具很重要！
+# 速度
 
-- Evernote
-- 为知笔记
-- Xmind
-- Markdown
-- pandoc
-- Atom
+做网站另一个重点要考虑的问题就是速度。一般首页都是要优化到秒开的！对于工具来说，其实也有这个问题。比如说，你灵感突现，需要赶紧记下来，然后打开Word,Word刚打开，你忘了～
 
-第一次使用Evernote还是2的时候吧，就是以瀑布的形式展示文档的！使用Evernote的第一原因是颜值高！不过后来因为下一版布局修改，使用C#开发，安装包由30m左右爆增到100多m。而且网络收藏功能有问题，图片会无故丢失，最后就不用了！后来用了为知笔记，麦库之类的笔记软件。都有这样那样的问题。最后只好使用了组合拳！
+# 不限制/打断思考
 
-- 为知笔记进行收集，前身是网文快捕，专注收集网上资料的
-- Xmind整理思路
-- Evernote保存Xmind思路，因为有很好的图片搜索功能
-- Markdown记录文章
-- pandoc做格式转换
-- Atom作为编辑器和PDF转换,pandoc的PDF转换费事，且中文支持不好
+不知道大家是如何定义自己的工作性质的？我很赞同《人件》里所说的，我们实际上是“非高科技脑力劳动者”！
+
+既然是脑力劳动者，我们的主要工作是思考，手快没用，脑子快才是王道！所以我们需要有工具能帮助我们思考！至少不能限制和打断我们的思考！
+
+这也是我选择工具时很看重的一点！从这一点来看的话，其实很多软件都不合格！
+
+# 集中吐槽
+
+上面列出了几点需求，同时小吐槽了一下。这里集中吐槽几款工具！
+
+## Office
+
+- 简单:★★☆
+- 跨平台/全平台:★☆
+- 颜值:★★☆
+- 速度:★★
+- 不限制/打断思考:★★
+
+从简单性来说，Office入门容易，精通难！Windows独有，其他平台都是第三方软件！颜值一般，速度一般！
+
+最大的问题是很容易打断思考!大家可以回忆下，我们用Office写文档或者写PPT的时候，是怎么写的？这个地方字体是不是要加粗？该用几号字体？这个图片该放哪里？有多少是涉及到内容本身的？分分钟就跑偏的节奏！
+
+# eclipse
+
+- 简单:★☆
+- 跨平台/全平台:★★★★☆
+- 颜值:★★
+- 速度:★
+- 不限制/打断思考:★
+
+eclipse在Java界是默认的IDE,我很早之前就抛弃了。现在看来，它的各种毛病都还在！
+
+首先说简单，作为一个专业IDE，就已经和简单不挂钩了！全平台支持，这个值得表扬！没给五星，是因为在各个平台下的体验还是有些许的差异的！颜值在默认主题下还好，但是自定义主题就露馅了！
+
+![](/assets/think/tools/tools_eclipse_01.png)
+
+速度只能说，我等得花都谢了～
+
+eclipse的主要问题也在打断思维上！
+
+- Crash： 我最初使用eclipse的时候是3.0左右，时不时就crash！我想好思路想实现了，eclipse不见了～你说郁闷不郁闷？
+- 快捷键：eclipse流行的一个原因就是它的插件机制。可能是太开放的原因，插件功能快捷键根本不统一！比如说：我编写Java，Ctrl-Shift-F是格式化！我编写JSP或者其他语言的时候，格式化快捷键就不是这个了！一个软件，我要学几套快捷键吗？
+- 保存时编译：双刃剑，机器差一点，立马卡顿～
+- 恶心的进度条：eclipse的很多操作都会出现进度条。有些进度条还好，在后台。有些进度条就直接弹出，还不让后台执行。每个进度条后面都有个终止按钮，但是没鸟用～你按了，按钮置灰，滚动条还在欢快的滚～
+
+![](/assets/think/tools/tools_eclipse_02.png)
+
+# Java
+
+- 简单:★★★
+- 跨平台/全平台:★★★★★
+- 颜值:
+- 速度:★★
+- 不限制/打断思考:★★
+
+吐槽完工具，来吐槽语言！Java是门不错的工程语言。
+网上吐槽比较多的是Java的启动速度和语法不灵活！我觉得最大的问题是限制思考！
+
+- Java只支持面向对象编程！所有的东西都是对象！这就像你手里拿着锤子，看什么都是钉子！面向对象比较善于建模，但是不擅长计算！这也是为什么目前新语言大部分都支持多种编程范式：Clojure,Kotlin,Scala,Golang
+- Java对面向对象编程，支持得并不彻底！例如：面向对象推荐与对象相关的行为最好和该对象关联，像people.walk(),computer.start()这样的代码形式！但是对已有的对象，除了继承，Java没有其他的方法可以添加行为！这也就是为什么Java里有那么多Util类的一个原因！
+
+# 推荐工具
+
+## Markdown+Pandoc
+
+- 简单:★★★★
+- 跨平台/全平台:★★★★★
+- 颜值:
+- 速度:★★★★
+- 不限制/打断思考:★★★★
+
+Markdown和Pandoc在上面都做过了介绍。这里总结下，使用Markdown专注内容，而使用Pandoc来进行展示。
+
+![](/assets/think/tools/tools_markdown.gif)
+
+
+## Intellij IDEA
+
+- 简单:★☆
+- 跨平台/全平台:★★★★☆
+- 颜值:★★★★
+- 速度:★
+- 不限制/打断思考:★★★★
+
+IDEA启动速度很慢，不过每天就启动一次，启动完后基本就是指哪打哪的神器！贴几张网上的gif图！
+
+![](/assets/think/tools/tools_idea_01.gif)
+![](/assets/think/tools/tools_idea_02.gif)
+![](/assets/think/tools/tools_idea_03.gif)
+
+## PlantUML
+
+- 简单:★★★
+- 跨平台/全平台:★★★★★
+- 颜值:★★★
+- 速度:★★★★
+- 不限制/打断思考:★★★★
+
+PlantUML的一个显著缺点是，当元素多了以后，并不好维护!
