--- a/source/mytask/2016-07-11.md
+++ b/source/mytask/2016-07-11.md
@@ -2,13 +2,13 @@
 # 任务
 
 - [x] 工作周报 10:00 - 10:30
-- [ ] 微服务PPT 9:30 - 10:00
-    - 什么是微服务?
-    - 什么是SOA?
-    - 两者的区别?
-- [ ] 百卓SOA问题确认 10:30 
-    - ThreadPoolTaskExecutor的作用
-- [ ] Hydra服务权重功能开发
-    - [ ]
+- [x] 微服务PPT 9:30 - 10:00
+- [x] 百卓SOA问题确认 10:30
+- [x] Hydra服务方法添加tooltip功能 14:00 - 17:30
 
 # 总结
+
+- 什么是微服务?
+- 什么是SOA?
+- 两者的区别?
+- ThreadPoolTaskExecutor的作用
