--- a/source/_posts/tech/code/2016-08-14-function.md
+++ b/source/_posts/tech/code/2016-08-14-function.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 一个思维例子
+title: 编程语言对思维的影响
 categories: code
 tags: [java,clojure]
 avatarimg: "/img/head.jpg"
@@ -14,3 +14,41 @@ author: wangyifan
 - 打印服务结果
 - 10%的几率较少访问量，10%几率高访问量，80%几率正常访问量
 - 打印各个访问量情况下的服务调用时间
+
+如果使用Java来实现，那么大致的思路是这样的:
+
+- 随机调用服务：那么我需要一个随机数，当这个随机数落到某个范围内时，就调用对应的服务
+
+```
+remoteServiceA()
+remoteServiceB()
+remoteServiceC()
+
+while(true){
+    def rand = rand(3)
+    if(rand < 1){
+        println(remoteServiceA())
+    }else if(rand > 2){
+        println(remoteServiceB())
+    }else{
+        println(remoteServiceC())
+    }
+}
+```
+
+
+```clojure
+(defn rand-infinite [vec]
+    (repeatedly #(get vec (->> vec count rand int))))
+    
+(def fns [call-serviceA call-serviceB call-serviceC])
+(def arr [1 10 10 10 10 10 10 10 10 10 100])
+
+(defn -main [& args]
+    (loop [rand-fns (rand-infinite fns)
+           nums (rand-infinite arr)]
+           (Thread/sleep 1000)
+           (time (println (pmap #(% obj) (take (first nums) rand-fns)))
+           (recur (drop (first nums) rand-fns)
+                  (drop 1 nums)))))
+```
