--- a/source/_posts/tech/code/2016-08-14-function.md
+++ b/source/_posts/tech/code/2016-08-14-function.md
@@ -5,7 +5,7 @@ categories: code
 tags: [java,clojure]
 avatarimg: "/img/head.jpg"
 author: wangyifan
-
+published: false
 ---
 
 最近写了一个简单的客户端，用来模拟服务化框架的客户端调用，功能如下:
@@ -34,7 +34,7 @@ author: wangyifan
 public class RandomCall {
 
     private static ExecutorService executorService = Executors.newFixedThreadPool(4);
-    
+
     public static void main(String[] args) throws Exception {
         while (true) {
             int rand = (int)(Math.random() * 10);
@@ -47,7 +47,7 @@ public class RandomCall {
             }
         }
     }
-    
+
     private static void call(int n) throws Exception {
         final AtomicLong total = new AtomicLong(0);
         final CountDownLatch latch = new CountDownLatch(n);
@@ -60,14 +60,14 @@ public class RandomCall {
                     } else {
                         System.out.println(callServiceB());
                     }
-                    
+
                     total.addAndGet(System.currentTimeMillis() - start);
-                    
+
                     latch.countDown();
                 }
             });
         }
-    
+
         latch.await();
 
         System.out.println("Invoke " + n + ":" + total + " ms");
@@ -146,7 +146,7 @@ public class RandomCall {
 ```clojure
 (defn rand-infinite [vec]
     (repeatedly #(get vec (->> vec count rand int))))
-    
+
 (def fns [call-serviceA call-serviceB])
 (def arr [1 10 10 10 10 10 10 10 10 100])
 
@@ -198,7 +198,7 @@ Clojure代码实现如下(递归实现):
 ```clojure
 (defn rand-infinite [vec]
     (repeatedly #(get vec (->> vec count rand int))))
-    
+
 (def fns [call-serviceA call-serviceB])
 (def arr [1 10 10 10 10 10 10 10 10 100])
 
