--- a/source/_posts/tech/code/2016-08-14-function.md
+++ b/source/_posts/tech/code/2016-08-14-function.md
@@ -34,7 +34,7 @@ author: wangyifan
 public class RandomCall {
 
     private static ExecutorService executorService = Executors.newFixedThreadPool(4);
-    
+
     public static void main(String[] args) throws Exception {
         while (true) {
             int rand = (int)(Math.random() * 10);
@@ -45,9 +45,10 @@ public class RandomCall {
             } else {
                 call(10);
             }
+            Thread.sleep(1000L);
         }
     }
-    
+
     private static void call(int n) throws Exception {
         final AtomicLong total = new AtomicLong(0);
         final CountDownLatch latch = new CountDownLatch(n);
@@ -60,14 +61,14 @@ public class RandomCall {
                     } else {
                         System.out.println(callServiceB());
                     }
-                    
+
                     total.addAndGet(System.currentTimeMillis() - start);
-                    
+
                     latch.countDown();
                 }
             });
         }
-    
+
         latch.await();
 
         System.out.println("Invoke " + n + ":" + total + " ms");
@@ -146,7 +147,7 @@ public class RandomCall {
 ```clojure
 (defn rand-infinite [vec]
     (repeatedly #(get vec (->> vec count rand int))))
-    
+
 (def fns [call-serviceA call-serviceB])
 (def arr [1 10 10 10 10 10 10 10 10 100])
 
@@ -173,7 +174,7 @@ public class RandomCall {
 ;;以此类推
 ```
 
-Clojure代码实现如下(递归实现):
+第一印象是递归,Clojure代码实现如下:
 
 ```clojure
 (loop [rand-fns (rand-infinite fns)
@@ -186,11 +187,43 @@ Clojure代码实现如下(递归实现):
 最后就是构建线程进行函数调用
 
 ```clojure
-(time (println (pmap #(% obj) (take (first nums) rand-fns)))
+(time (println (pmap #(%) (take (first nums) rand-fns)))
 ;;pmap就是将#(% obj)这个函数依次应用到后面的序列上，并且是并发的
 ;;time函数打印出执行所需要的时间
 ;;(take (first nums) rand-fns)就是依据nums元素的大小，获取相应数量的rand-fns的元素
 ;;rand-fns中的元素是函数，直接放在括号里的第一个元素就可以执行了，这里是替换了那个%
+```
+
+实际上可以更进一步，上面的流程，相当于遍历下面这个链表:
+
+```clojure
+[[call-serviceA] [call-serviceA call-serviceB ...] [call-serviceB] [call-serviceB call-serviceA ...] ...]
+```
+
+所以只需要构建类似上面的链表结构就可以了，Clojure里很简单:
+
+```clojure
+(let [rand-fns (rand-infinite fns)
+       rand-arr (rand-infinite arr)
+       group-rand-fns (map #(take % rand-fns) rand-arr)]
+       ...))
+;;group-rand-fns就是我们需要的链表结构
+```
+
+最后只要遍历这个链表就可以了:
+
+```clojure
+(defn invoke [fns]
+    (Thread/sleep 1000)
+    (time (println (pmap #(%) fns))))
+
+(defn -main [& args]
+    (let [rand-fns (rand-infinite fns)
+           rand-arr (rand-infinite arr)
+           group-rand-fns (map #(take % rand-fns) rand-arr)]
+           (doall (map invoke group-rand-fns))))
+;;doall表示立即执行，因为map出来的链表是lazySeq,这里的map相当于外层循环，对每个内部链表应用invoke函数
+;;invoke内部是内层循环，每隔1秒就并发调用链表中的函数
 ```
 
 完整代码如下:
@@ -198,22 +231,54 @@ Clojure代码实现如下(递归实现):
 ```clojure
 (defn rand-infinite [vec]
     (repeatedly #(get vec (->> vec count rand int))))
-    
+
 (def fns [call-serviceA call-serviceB])
 (def arr [1 10 10 10 10 10 10 10 10 100])
 
+(defn invoke [fns]
+    (Thread/sleep 1000)
+    (time (println (pmap #(%) fns))))
+
 (defn -main [& args]
-    (loop [rand-fns (rand-infinite fns)
-           nums (rand-infinite arr)]
-           (Thread/sleep 1000)
-           (time (println (pmap #(% obj) (take (first nums) rand-fns)))
-           (recur (drop (first nums) rand-fns)
-                  (drop 1 nums)))))
+    (let [rand-fns (rand-infinite fns)
+           rand-arr (rand-infinite arr)
+           group-rand-fns (map #(take % rand-fns) rand-arr)]
+           (doall (map invoke group-rand-fns))))
+```
+
+# Java8实现
+
+```java
+public class RandomCall {
+
+    public static void main(String[] args) throws Exception {
+        Function<Supplier<String>,Long> func = sup -> {
+            long start = System.currentTimeMillis();
+            sup.get();
+            return System.currentTimeMillis() - start;
+        };
+
+        Supplier<String> serviceASup = () -> callServiceA();
+        Supplier<String> serviceBSup = () -> callServiceB();
+
+        List<Supplier<String>> fns = Arrays.asList(serviceASup,serviceBSup);
+        List<Integer> arr = Arrays.asList(1,10,10,10,10,10,10,10,10,100);
+
+        Stream.generate(() -> (int) (Math.random() * 10)).map(arr::get)
+              .forEach(n -> {
+                    Thread.sleep(1000L);
+
+                    System.out.println(Stream.generate(() -> (int) (Math.random() * 2)).map(fns::get).limit(n)
+                    .parallel().mapToLong(func::apply).sum());
+              });
+    }
+}
 ```
 
 # 总结
 
-- 最终代码，Clojure明显少于Java。在代码表现力上Clojure >> Java
+- 最终代码，Clojure明显少于Java、略少于Java8。在代码表现力上Clojure > Java8 > Java
 - 函数式思路和过程式思路差异很大
 - 在编写Clojure代码时，明显是偏脑力的劳动。而在编写Java的时候，明显是偏体力的劳动
 - 编写Clojure代码，如果不多思考，则写出来的代码将比Java要难读得多
+- Java8代码比Clojure代码可读性上感觉更差
