--- a/source/_posts/tech/code/2016-08-14-function.md
+++ b/source/_posts/tech/code/2016-08-14-function.md
@@ -5,7 +5,7 @@ categories: code
 tags: [java,clojure]
 avatarimg: "/img/head.jpg"
 author: wangyifan
-published: false
+
 ---
 
 最近写了一个简单的客户端，用来模拟服务化框架的客户端调用，功能如下:
@@ -16,6 +16,8 @@ published: false
 - 打印各个访问量情况下的服务调用总时间
 
 分别尝试了Java和Clojure实现，在实现过程中，两者的思路完全不同！
+
+<!-- more -->
 
 # 面向对象/面向过程语言思路
 
