--- a/source/_posts/tech/code/2016-08-14-function.md
+++ b/source/_posts/tech/code/2016-08-14-function.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 编程语言对思维的影响
+title: 函数式思维的小例子
 categories: code
 tags: [java,clojure]
 avatarimg: "/img/head.jpg"
@@ -17,8 +17,6 @@ author: wangyifan
 
 分别尝试了Java和Clojure实现，在实现过程中，两者的思路完全不同！
 
-<!-- more -->
-
 # 面向对象/面向过程语言思路
 
 逻辑很简单，基本不涉及面向对象概念，主要还是面向过程语言的思路！
@@ -29,6 +27,8 @@ author: wangyifan
 - 随机调用服务就是判断随机数大小，例如:0~1的随机数范围，大于0.5访问服务A,否则访问服务B
 - 并发量判定则可以依据0~10的随机数范围，小于等于1时并发为1，大于等于9时并发为100，否则并发为10
 - 在每个服务调用完成后，统计执行时间，然后汇总就可以了
+
+<!-- more -->
 
 下面是Java实现的代码:
 
@@ -250,6 +250,8 @@ public class RandomCall {
 
 # Java8实现
 
+Java8提供了lambda表达式等功能，支持函数式编程，下面使用Java8实现，直接贴代码：
+
 ```java
 public class RandomCall {
 
@@ -283,4 +285,4 @@ public class RandomCall {
 - 函数式思路和过程式思路差异很大
 - 在编写Clojure代码时，明显是偏脑力的劳动。而在编写Java的时候，明显是偏体力的劳动
 - 编写Clojure代码，如果不多思考，则写出来的代码将比Java要难读得多
-- Java8代码比Clojure代码可读性上感觉更差
+- Java8代码比Clojure代码可读性上感觉更差(可能自己对Java8的函数式思路还不太了解)
