--- a/source/_posts/think/2016-10-09-concept.md
+++ b/source/_posts/think/2016-10-09-concept.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 概念理解
+title: 你真的理解我在说什么吗？
 categories: [think]
 tags: [think,concept]
 avatarimg: "/img/head.jpg"
@@ -8,9 +8,19 @@ author: wangyifan
 
 ---
 
+# 技术也很感性
+
+我从学生时代就很偏科，感兴趣的都是理工科，对文科没兴趣，其中特别讨厌的就是现代文阅读理解---“上面的文章表达了作者什么思想？”谁TM知道他想的什么？！这也让我想起有的心理学书里写的一个场景：两个人聊天，如果一个人双手抱胸，那可能是不太想和你聊天。在《和任何人都聊得来》这本书里，作者答复，对方双手抱胸不一定是不想和你聊天，可能是因为他冷。。。
+
+毕业后半路出家做了开发，我是个实用主义者，所以不会考虑太多概念上的问题，更多的是考虑如何实现。我做技术的一个原因是认为技术相对来说是比较理性的：不是true就是false！所以我之前的博客文章不是翻译、就是如何使用！但是在看了《批判性思维》，《如何阅读一本书》，《哲学家们都干了些什么》，奇葩说，等等后，发现技术其实也是很感性的！
+
 # 源起
 
-## 技术也很感性
+前几天需要做个演讲，在演讲前和公司大领导就PPT进行了沟通，在沟通过程中明显感觉到了自己对概念理解的不够透彻，领导几个问题一问，原本感觉挺理所当然的字词、概念，就没法说清楚。比如就演讲的题目来说---《***的演变》，什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？一问才感觉自己思考得不够清楚！
+
+和大领导的沟通中，感觉他的思考方式是从一个概念出发，然后进行展开。我的直属领导在以前的聊天中，发现他也是类似的思路，当然有些区别。之前读了基本李笑来的书，他在书中也提到了类似的方法，从一个概念出发，来衍生出后续的知识。还有罗振宇在一期罗辑思维中也提到了类似的学习方法。再之前，我在知乎看了一篇关于如何一周内摸清一个行业，里面的思路也很类似，先学行业“黑话”，其实就是行业里的概念了。等等等等。
+
+几年前我就感觉到了自己的瓶颈，一直在思考突破，尝试着各种改变，其中一个就是对思维方式的改变。我暂且叫“总分思维方式”，在工作中进行了尝试，发现对建立知识结构很有效，大致思路和上面说的方法很类似。现在发现这么多人都有类似的思维方式，再加上自己的尝试，发现效果不错，所以决定在这条路上走下去。
 
 ## 程序员思维的瓶颈
 
