--- a/source/_posts/think/2016-10-09-concept.md
+++ b/source/_posts/think/2016-10-09-concept.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 你真的理解我在说什么吗？
+title: 你真的理解概念了吗？
 categories: [think]
 tags: [think,concept]
 avatarimg: "/img/head.jpg"
@@ -8,26 +8,67 @@ author: wangyifan
 
 ---
 
-# 技术也很感性
-
-我从学生时代就很偏科，感兴趣的都是理工科，对文科没兴趣，其中特别讨厌的就是现代文阅读理解---“上面的文章表达了作者什么思想？”谁TM知道他想的什么？！这也让我想起有的心理学书里写的一个场景：两个人聊天，如果一个人双手抱胸，那可能是不太想和你聊天。在《和任何人都聊得来》这本书里，作者答复，对方双手抱胸不一定是不想和你聊天，可能是因为他冷。。。
-
-毕业后半路出家做了开发，我是个实用主义者，所以不会考虑太多概念上的问题，更多的是考虑如何实现。我做技术的一个原因是认为技术相对来说是比较理性的：不是true就是false！所以我之前的博客文章不是翻译、就是如何使用！但是在看了《批判性思维》，《如何阅读一本书》，《哲学家们都干了些什么》，奇葩说，等等后，发现技术其实也是很感性的！
-
 # 源起
 
-前几天需要做个演讲，在演讲前和公司大领导就PPT进行了沟通，在沟通过程中明显感觉到了自己对概念理解的不够透彻，领导几个问题一问，原本感觉挺理所当然的字词、概念，就没法说清楚。比如就演讲的题目来说---《***的演变》，什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？一问才感觉自己思考得不够清楚！
+前几天需要做个演讲，在演讲前和领导就PPT进行了沟通，沟通过程中明显感觉到了自己对概念理解的不够透彻，领导几个问题一问，原本感觉挺理所当然的字词、概念，就没法说清楚。比如就演讲的题目来说---《***的演变》，什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？一问才感觉自己思考得不够清楚！
 
-和大领导的沟通中，感觉他的思考方式是从一个概念出发，然后进行展开。我的直属领导在以前的聊天中，发现他也是类似的思路，当然有些区别。之前读了基本李笑来的书，他在书中也提到了类似的方法，从一个概念出发，来衍生出后续的知识。还有罗振宇在一期罗辑思维中也提到了类似的学习方法。再之前，我在知乎看了一篇关于如何一周内摸清一个行业，里面的思路也很类似，先学行业“黑话”，其实就是行业里的概念了。等等等等。
+再细想，发现在生活中我们好像也并不会太细究概念，感觉都是理所当然的。而且每个人对概念的理解都是有差异甚至是截然不同的，甚至是同一个人在不同的时间对概念的理解也会有不同。举个例子：
 
-几年前我就感觉到了自己的瓶颈，一直在思考突破，尝试着各种改变，其中一个就是对思维方式的改变。我暂且叫“总分思维方式”，在工作中进行了尝试，发现对建立知识结构很有效，大致思路和上面说的方法很类似。现在发现这么多人都有类似的思维方式，再加上自己的尝试，发现效果不错，所以决定在这条路上走下去。
+- 学习
 
-## 程序员思维的瓶颈
+学习是大家经常听到、也经常说的一个词吧？那你能解释一下什么是“学习”吗？
 
-## 运营层面
+- 如果你是个学生，你可能会认为学习就是上课、读书、做作业等等相关行为
+- 如果你工作了，学习可能就是熟悉工作相关的内容
+- 而可能有的人会认为学习就是去认知这个世界
+- 甚至某人为了游戏通关去看游戏秘籍、泡网吧练微操，在他看来也是一种学习，但是可能在别人眼里就是不务正业了
+- 等等等等
 
-# 做什么
+<!-- more -->
 
-# 怎么做
+现在再想一下，你真的理解概念了吗？你真的给人说明白了吗？别人真的听懂你所表达的意思了吗？
 
-每天一个概念，当周的概念有相关性，与当周的文章对应
+所以，我先来解释一下我所理解的“概念”！
+
+# 什么是“概念”
+
+维基百科里的一个解释
+
+```
+中华人民共和国国家标准：“概念”是对特征的独特组合而形成的知识单元。
+```
+
+上面是“标准理解”。而我理解的概念是什么呢？
+
+从“标准理解”里可以看出：
+
+- 概念是抽象的
+- 反映了事物的共性
+
+我首先想到的是面向对象里面的“类”，类是一组对象的抽象，表示一类对象的共性，而对象相当于是对概念的不同理解。类组合成组件（概念组合成知识点），组件组合成子系统（知识点组合成知识面），子系统组合成整个系统（知识面组合成知识体系）。
+
+对我来说，“概念”就是最小的不需要解释的字词！比如当你说“书”的时候，你就不需要解释“一种出版社出版的、带有封面、目录、内容的，能学习知识或休闲的纸质的或电子的东西”！
+
+而我们的沟通，是建立在这些“概念”之上的！也就是说，两个人的概念交集越大，沟通就越容易！反之，越难沟通！所以我认为**“概念”是我们沟通、建立知识体系最基本的单元。**
+
+# 如何理解概念？
+
+知道了“概念”是什么。那我们如何来理解概念呢？
+
+- 首先需要对概念有自我认知，即有自己的一个理解。比如上面的“学习”
+- 因为“学习”是一个过程，那可以通过实践，形成适合自己的方法论
+- 将对“学习”的理解表达出来，通过别人的反馈，对其进行修正
+- 在实践的过程中也可以对其进行修正
+- 通过不断的积累，形成自己的知识点-》知识面-》知识体系
+
+# 写在最后
+
+我为什么会有上面的想法呢？因为我遇到了几个类似的例子！
+
+- 在和领导的沟通中，感觉他的思考方式是从一个概念出发，然后进行展开(上推和下探)
+- 之前读了几本李笑来的书，他在书中也提到了类似的方法，从一个概念出发，来衍生出后续的知识
+- 还有罗振宇在一期罗辑思维中也提到了类似的学习方法
+- 再之前，我在知乎看了一篇关于如何一周内摸清一个行业，里面的思路也很类似，先学行业“黑话”，其实就是行业里的概念了。等等等等。
+- 最后是个人在工作学习中的实践，确实有效
+
+在《如何阅读一本书》里，最后一种阅读方式---主题阅读。大致方法就是读一类书籍，总结出有共性的内容。这里套用一下，**主题学习**，观察比自己牛的人，总结出相似的思维模式、观点、认知，进行学习！
