--- a/source/_posts/think/2016-10-09-concept.md
+++ b/source/_posts/think/2016-10-09-concept.md
@@ -72,3 +72,4 @@ author: wangyifan
 - 最后是个人在工作学习中的实践，确实有效
 
 在《如何阅读一本书》里，最后一种阅读方式---主题阅读。大致方法就是读一类书籍，总结出有共性的内容。这里套用一下，**主题学习**，观察比自己牛的人，总结出相似的思维模式、观点、认知，进行学习！
+C执行流程
