--- a/source/_posts/read/2016-10-30-machine.md
+++ b/source/_posts/read/2016-10-30-machine.md
@@ -5,6 +5,7 @@ categories: [book]
 tags: [book,read]
 avatarimg: "/img/head.jpg"
 author: wangyifan
+published: false
 
 ---
 
@@ -19,6 +20,8 @@ author: wangyifan
 其实只要稍微注意一下，就可以发现近几年频频有类似的新闻！例如：3D打印机的出现，谷歌无人驾驶，特斯拉将无人驾驶商用，亚马逊、京东、菜鸟物流的自动化仓储机器人，富士康流水线使用机器人，等等等等
 
 而相对的，我们人类的境况好像就差了很多。不看《与机器赛跑》里举的美国的例子，就看我们周围的例子。什么今年高考人数又减了多少，创新低。大学生失业率增加了多少，创新低。富士康裁员了。实体企业又有多少家关门了。。。。好像自07、08年金融危机以后，就没有什么好消息（房市就算了，其实也不算什么好消息）！
+
+<!-- more -->
 
 这种情况是金融危机导致的吗？
 
