--- a/source/_posts/think/2016-10-30-salary.md
+++ b/source/_posts/think/2016-10-30-salary.md
@@ -14,7 +14,7 @@ author: wangyifan
 
 # 平均数
 
-标题是平均薪酬，而在文中并没有提到是如何计算的(以前我也不会考虑这个问题，天真的以为“平均数”，不就是总和/数量吗？在《批判性思维》《统计数字会说谎》里面都提到过这个问题)！到底是计算的平均数，中位数，还是众数？
+第一个疑问是“平均”！标题是平均薪酬，而在文中并没有提到是如何计算的(以前我也不会考虑这个问题，天真的以为“平均数”，不就是总和/数量吗？在《批判性思维》《统计数字会说谎》里面都提到过这个问题)！到底是计算的平均数，中位数，还是众数？
 
 **平均数**：一组数据的总和除以这组数据个数所得到的商叫这组数据的平均数。
 
@@ -22,13 +22,15 @@ author: wangyifan
 
 **众数**：在一组数据中出现次数最多的数叫做这组数据的众数。
 
+<!-- more -->
+
 举个很简单的例子就可以看出不同了。假如有5个人在智联招聘找到工作，工资分别是1k,1k,6k,6.1k,6.3k!那这5个人的平均数是"1k+1K+6K+6.1k+6.3k/5=4.08k",中位数是6k,众数是1k!
 
 如果你是智联招聘，你会放哪个数据出来？
 
 # 广告嫌疑
 
-考虑到智联招聘是招聘网站，也是需要流量的，薪资高的话，相当于就是变相的向需要找工作的人打广告，就像说“快到智联招聘来投简历吧，看在我网站找的工作的薪资多高！”！从这个角度看，你觉得放哪个数据合适呢？
+第二个疑问就是广告嫌疑了！考虑到智联招聘是招聘网站，也是需要流量的，薪资高的话，相当于就是变相的向需要找工作的人打广告，就像说“快到智联招聘来投简历吧，看在我网站找的工作的薪资多高！”！从这个角度看，你觉得放哪个数据合适呢？
 
 # 数据来源
 
