--- a/source/_posts/read/2016-10-30-machine.md
+++ b/source/_posts/read/2016-10-30-machine.md
@@ -11,21 +11,32 @@ published: false
 
 上周抽时间把这《与机器赛跑》本书刷完了，总体结论还是挺乐观的！聊聊自己的看法！
 
-# 机器的胜利
+# 技术大爆发
 
 今年上半年比较火的一件事就是2016年3月9日起，谷歌开发的AlphaGo 与世界顶级围棋手李世石的比赛了，结果是4:1，AlphaGo碾压李世石！
 
 而早在1997年5月，IBM深蓝计算机就击败了国际象棋世界冠军卡斯巴罗夫。当时人们还确认计算机搞不定围棋，可是20年不到，就被打脸了！
 
-其实只要稍微注意一下，就可以发现近几年频频有类似的新闻！例如：3D打印机的出现，谷歌无人驾驶，特斯拉将无人驾驶商用，亚马逊、京东、菜鸟物流的自动化仓储机器人，富士康流水线使用机器人，等等等等
+其实只要稍微注意一下，就可以发现近几年频频有类似的新闻！例如：3D打印机的出现，谷歌无人驾驶，特斯拉将无人驾驶商用，亚马逊、京东、菜鸟物流的自动化仓储机器人，富士康流水线使用机器人，中国也发布了自动汽车发展规划，等等等等
 
 而相对的，我们人类的境况好像就差了很多。不看《与机器赛跑》里举的美国的例子，就看我们周围的例子。什么今年高考人数又减了多少，创新低。大学生失业率增加了多少，创新低。富士康裁员了。实体企业又有多少家关门了。。。。好像自07、08年金融危机以后，就没有什么好消息（房市就算了，其实也不算什么好消息）！
 
 <!-- more -->
 
-这种情况是金融危机导致的吗？
+那这种情况是金融危机导致的吗？书中的观点是金融危机使这些问题显现了出来，即使没有金融危机，这些事情迟早也会发生！
+
+针对美国失业率高的问题，书中给出了三种不同的解释：周期性、停滞和“工作的终结”。对中国应该也有效！
+
+- 周期性一说认为，这事儿完全不新鲜，不神奇；美国失业率这么高，完全是因为经济发展速度还不够快，不足以把人们送回职场。
+- “停滞”指的是，美国的创新能力，以及生产率的提高速度陷入了长期衰退。此一解释还有另一种版本。该版本认为不是美国停滞了，而是中国和印度等其他国家开始迎头赶上。在全球化经济中，如果美国的企业和工人生产效率不能比其他国家的同行更快，就无法获得溢价。
+- 第三种解释：正是因为技术创新的步伐太快，才把许许多多的人抛在了后面。简而言之，好多工人，在跟机器的赛跑中出了局。
+
+作者支持第三种解释！并解释了，为什么技术革新在这段时间里爆发！而不是在之前某个时间里发生！
 
 # 摩尔定律与棋盘下半场
+
+摩尔定律：摩尔定律大家应该都很熟悉了。由英特尔创始人之一戈登·摩尔提出。 其内容为：集成电路上可容纳的電晶体（晶体管）数目，约每隔24个月便会增加一倍；后来修正为18个月翻一倍
+棋盘下半场：这个故事大家也很熟悉。国王为了奖励国际象棋的发明者，愿意给其任何想要的东西。于是发明者就让国王在国际象棋棋盘上第一个格子上放1粒米，第二个格子上放两粒米，第三个格子上放四粒米，依次类推，放满整个棋盘。
 
 # 创造性破坏
 
