--- a/source/_posts/read/2016-10-30-machine.md
+++ b/source/_posts/read/2016-10-30-machine.md
@@ -35,8 +35,10 @@ published: false
 
 # 摩尔定律与棋盘下半场
 
-摩尔定律：摩尔定律大家应该都很熟悉了。由英特尔创始人之一戈登·摩尔提出。 其内容为：集成电路上可容纳的電晶体（晶体管）数目，约每隔24个月便会增加一倍；后来修正为18个月翻一倍
-棋盘下半场：这个故事大家也很熟悉。国王为了奖励国际象棋的发明者，愿意给其任何想要的东西。于是发明者就让国王在国际象棋棋盘上第一个格子上放1粒米，第二个格子上放两粒米，第三个格子上放四粒米，依次类推，放满整个棋盘。
+- 摩尔定律：摩尔定律大家应该都很熟悉了。由英特尔创始人之一戈登·摩尔提出。 其内容为：集成电路上可容纳的電晶体（晶体管）数目，约每隔24个月便会增加一倍；后来修正为18个月翻一倍
+- 棋盘下半场：这个故事大家也很熟悉。国王为了奖励国际象棋的发明者，愿意给其任何想要的东西。于是发明者就让国王在国际象棋棋盘上第一个格子上放1粒米，第二个格子上放两粒米，第三个格子上放四粒米，依次类推，放满整个棋盘。
+
+我们有没有来到下半场？本书作者给出了肯定的答案。1958年，美国经济分析局将“信息技术”列入了商业投资类别，作者认为这可以算成起始年。根据摩尔定律，每18个月，集成晶管数量翻倍。国际象棋到达第32个格子标志着上半场结束进入下半场。而晶体管数量翻32倍，也就是过去了48年：2006年。嗯，2006年，被本书作者们认为，我们进入了棋盘下半场，一切的发展，将令人瞠目结舌。已经出现了一些例子，比如在2004年，一本名为《劳动新分工》的书还认为汽车是无法自动化的，但2010年，谷歌无人驾驶汽车出现。2011年，沃森计算机在《危险边缘》智力问答节目中，战胜了两位最出色的人类参赛者。人类对手在比赛最后一道题的书面回答后补充了一句话：我，欢迎我们的新霸主，电脑。 
 
 # 创造性破坏
 
