--- a/source/_posts/read/2016-10-30-machine.md
+++ b/source/_posts/read/2016-10-30-machine.md
@@ -5,11 +5,10 @@ categories: [book]
 tags: [book,read]
 avatarimg: "/img/head.jpg"
 author: wangyifan
-published: false
 
 ---
 
-上周抽时间把这《与机器赛跑》本书刷完了，总体结论还是挺乐观的！聊聊自己的看法！
+上周抽时间把《与机器赛跑》这本书刷完了，总体结论还是挺乐观的！聊聊自己的看法！
 
 # 技术大爆发
 
@@ -38,8 +37,32 @@ published: false
 - 摩尔定律：摩尔定律大家应该都很熟悉了。由英特尔创始人之一戈登·摩尔提出。 其内容为：集成电路上可容纳的電晶体（晶体管）数目，约每隔24个月便会增加一倍；后来修正为18个月翻一倍
 - 棋盘下半场：这个故事大家也很熟悉。国王为了奖励国际象棋的发明者，愿意给其任何想要的东西。于是发明者就让国王在国际象棋棋盘上第一个格子上放1粒米，第二个格子上放两粒米，第三个格子上放四粒米，依次类推，放满整个棋盘。
 
-我们有没有来到下半场？本书作者给出了肯定的答案。1958年，美国经济分析局将“信息技术”列入了商业投资类别，作者认为这可以算成起始年。根据摩尔定律，每18个月，集成晶管数量翻倍。国际象棋到达第32个格子标志着上半场结束进入下半场。而晶体管数量翻32倍，也就是过去了48年：2006年。嗯，2006年，被本书作者们认为，我们进入了棋盘下半场，一切的发展，将令人瞠目结舌。已经出现了一些例子，比如在2004年，一本名为《劳动新分工》的书还认为汽车是无法自动化的，但2010年，谷歌无人驾驶汽车出现。2011年，沃森计算机在《危险边缘》智力问答节目中，战胜了两位最出色的人类参赛者。人类对手在比赛最后一道题的书面回答后补充了一句话：我，欢迎我们的新霸主，电脑。 
+当到下半场时，米粒的增长速率就非常的快，在下半场的第一格，也就是第33格，需要放置2^32粒米，大概是42亿粒，假设每粒米重0.02克，42亿粒米，大概就是84吨，假设每亩地产500公斤大米的话，那大概就相当于150亩地的产量。后面每一格都翻倍，累计效应非常的惊人。
 
-# 创造性破坏
+而目前技术发展正进入棋盘下半场。书中作者给出解释：1958年，美国经济分析局将“信息技术”列入了商业投资类别，作者认为这可以算成起始年，根据摩尔定律，每18个月，集成晶管数量翻倍。国际象棋到达第32个格子标志着上半场结束进入下半场。而晶体管数量翻32倍，也就是过去了48年：2006年。
+
+前面所说的技术的发展就得到了解释。
+
+# 技术性失业
+
+由于我们新发现了大量减少使用劳动力的手段，而又尚未及时地给劳动力找到新的用途，如此导致的失业，称为**技术性失业**
+
+就以上面的自动驾驶为例。特斯拉全系都支持自动驾驶了，中国也发布了自动汽车发展规划，在不远的将来，自动驾驶绝对会普及。
+
+自动驾驶普及后会发生什么？出租车还需要司机了吗？恐怖的大货车还需要司机吗？再进一步讲，我们还需要养车吗？还需要为停车位和堵车烦恼吗？
+
+我们可以想象一下，以后我们的出行会是什么样的情形？拿出手机，预约行程，一辆汽车就会在你预订的时间内到达你指定的地点来接你，你上车后，汽车自动规划最优路线（如果所有的汽车都联网，那所有路线数据都上传到云端，通过云端计算，整体规划线路，达到真正的路线最优），将你送达到目的地，然后自己去接下一位乘客。
+
+如果再加上电池产业的发展，电动车完全替代燃油车。会有多少产业会被颠覆，多少人会因此而失业？！
 
 # 与机器共舞
+
+目前来看，人类是无法阻止技术的发展的！那如何避免上面的悲剧呢？
+
+想想我们为什么要发展技术？是为了减轻我们的负担，技术再牛，也有不擅长的,例如：给出一张图片，分辨出图片是什么，这对人来说太简单了，目前的技术却办不到(准确率不高)！更何况它只是工具！我们要利用技术进行互补。
+
+比如上面说的象棋比赛，现在发展为人+机器的比赛，人给机器编写好的算法，来赢得比赛。而对围棋来说，棋局太过复杂，可能一个专业的棋手穷其一生也不一定能记住所有的棋局，但是现在可以利用电脑来辅助，来突破人类的极限。
+
+之前看到一篇文章，说人类对大脑的开发程度1%都不到！所以我们的大脑(应该是思维)才是我们最强有力的武器！技术的发展是在强迫我们突破现有的思维模式和框架！
+
+说到底，**技术只是辅助**!
