--- a/source/_posts/read/2016-11-06-learn.md
+++ b/source/_posts/read/2016-11-06-learn.md
@@ -10,11 +10,13 @@ author: wangyifan
 
 《如何高效学习》最近在网上好像比较火，主要原因还是作者很牛逼！作者叫斯科特•扬，他应用自己发明的学习方法，完成了10天搞定线性代数，1年学习4年MIT课程的“不可能任务”。这本书是对其学习方法的总结。
 
-抽时间把这本书翻了一遍，和自己整理出来的方法很相似，但是还有差异，这个以后再说，这里说下作者在书中提到的学习方法：“整体性学习法”！
+所以抽时间看了这本书，作者提出的学习方法称为“整体性学习法[Holistic learning]”(大致思路和我自己归纳总结的方法很类似)!不过有些地方并不赞同，下面再说！
+
+首先吐槽下这本书的译者，哪来那么多的想法的？！是不评论会死星人吗？！每段都要加自己的观点，而且不是脚注，是直接跟在正文后面，看完整段后，发现后面三个字：“译者注”！这算不算骗稿费？！
 
 # 知识是有联系的
 
-“整体性学习法”的大前提是：作者认为学会把知识联系起来会记得更多，学得更好！《我最想要的记忆魔法书》这本书里也有类似的观点！我只是说在"**知识联系起来会记得更多**"这个观点上，两者相同，但本质还是很不同的！举个例子：
+“整体性学习法”的大前提是：作者认为学会把知识联系起来会记得更多，学得更好！在《我最想要的记忆魔法书》里也有类似的观点！我只是说在"**知识联系起来会记得更多**"这个观点上，两者相同，但本质还是很不同的！举个例子：
 
 在《我最想要的记忆魔法书》里，有个测试记忆水平的例子，作者给出了一组没什么关系的单词，看在三分钟之内能按顺序记住多少！你可以试试，单词如下:
 
@@ -43,6 +45,14 @@ author: wangyifan
 
 简单来说，类比就是**通过已知事物来认知未知事物**!
 
+举个段子：
+
+```
+某人女友一直分不清油门和刹车，他对女友说：“你把离合器，油门和刹车想象成左脚，右脚和档！要停车就踩“档”！如果有色狼要袭击你，你踢他裤裆他停不停？！”
+```
+
+如果以前你也分不清油门和刹车的话，现在能分清了没？
+
 # 整体性学习的结构
 
 作者将整体性学习分为三块：
@@ -51,7 +61,7 @@ author: wangyifan
 - 模型：核心概念
 - 高速公路：不同知识之间的联系，也可以说是知识的外延
 
-大致思路就是，通过模型(核心概念)构建初始结构，再在后续的实践中来完善这个结构，通过高速公路使得不同的结构之间产生联系(知识是有共性的)。
+大致思路就是，通过模型(核心概念)构建初始结构(就是先有一个整体轮廓)，再在后续的实践中来完善这个结构，再通过高速公路使得不同的结构之间产生联系(知识是有共性的)。
 
 # 整体性学习的步骤
 
@@ -63,19 +73,19 @@ author: wangyifan
 - 纠错：通过各种反馈来修正
 - 应用：实践
 
-同时针对各个步骤给出了具体的方法。比如怎么阅读啦，怎么理解啦，怎么纠错啦。没有太多特别的东西。有兴趣可以自己看书。
+针对各个步骤书中给出了具体的方法。比如怎么阅读啦，怎么理解啦，怎么纠错啦。有兴趣可以自己看书。
 
 这里举个简单的例子，就是上面的“红鲱鱼”这个单词！
 
 - 获取：我看到了“红鲱鱼”这个单词，知道了有“红鲱鱼”这么个东西
-- 理解：第一印象，“鲱鱼”应该是一种鱼类，“红鲱鱼”应该是一种红色的“鲱鱼”！到网上去去搜一下，发现“鲱鱼”确实是一种鱼类！
+- 理解：第一印象，“鲱鱼”应该是一种鱼类，“红鲱鱼”应该是一种红色的“鲱鱼”！到网上去搜一下，发现“鲱鱼”确实是一种鱼类！
 - 纠错：但是呢，“红鲱鱼”可不是一种红色的“鲱鱼”！“红鲱鱼”是英文习语。指以修辞或文学的手法转移议题焦点与注意力，是一种政治宣传、公关及戏剧创作的技巧。同时，你会发现，“红鲱鱼”英文应该写作“Red Herring”！而在《我最想要的记忆魔法书》里将“herring”翻译成了“红鲱鱼”，说明这里是译者犯的一个错误（不过，如果没翻译错误，我也不会知道“红鲱鱼”是习语～）！
 - 拓展：
         - “红鲱鱼”当成转移焦点的代名词有几种不同的起源。其中的一种认为当初反打猎人士为了混淆猎犬的嗅觉，所以在猎场中四处放置烟熏过的鲱鱼，借此转移猎犬的注意力；另外一种说法则认为是监狱逃犯为了诱骗追缉的警犬，所以在逃跑的路程外放置红鲱鱼，借此顺利逃脱。
         - “红鲱鱼”可以用在文学、戏剧，尤其是推理小说的创作上，通常代表误导读者思路的诱饵，让读者在看到结局之前，误以为某人或某事件为凶手或破案关键。
         - 红鲱鱼在公关与政治宣传上也经常被使用，利用新的事件或曲解议题，将群众的注意力移开原先关注的议题上。红鲱鱼常用来处理政府或企业面临的危机，在危机发生的时候抛出另外一个不相干的议题；或是配合“乐队花车”技巧，混淆群众。
-- 再理解（通过类比加深印象）：“红鲱鱼”很像魔术师的诱导，使得观众不会发现魔术师的“小动作”！“红鲱鱼”也很像是烟雾弹，但两者有细微的差异。“红鲱鱼”是刻意引入一个无关的议题以转移注意力；烟雾弹则是将主题搞得异常复杂而丧失焦点。
-- 应用：好像暂时用不上～
+- 再理解（通过类比加深印象）：“红鲱鱼”很像魔术师的诱导，使得观众不会发现魔术师的“小动作”！“红鲱鱼”也很像是“烟雾弹”，但两者有细微的差异。“红鲱鱼”是刻意引入一个无关的议题以转移注意力；烟雾弹则是将主题搞得异常复杂而丧失焦点。
+- 应用：技术工作，好像暂时用不上～
 
 # 关于阅读
 
@@ -87,4 +97,4 @@ author: wangyifan
 
 书中所提的“指读法”，就是用手指头指着，一行行的读。记得在上学的时候，老师就说过，不要用手指头，会带慢眼睛的速度。之前读的几本关于快速阅读的书也提到过不要用手指着读。而本书作者好像很推崇指读法！
 
-我比较赞同的是《如何阅读一本书》里所说的四种阅读方式：基础阅读，检视阅读，分析阅读和主题阅读！当然需要针对自身条件做调整！
+我比较赞同的是《如何阅读一本书》里所说的四种阅读方式：基础阅读，检视阅读，分析阅读和主题阅读！当然需要针对自身条件做调整！关于《如何阅读一本书》，后续整理!
