--- a/source/_posts/think/2016-11-13-vote.md
+++ b/source/_posts/think/2016-11-13-vote.md
@@ -8,7 +8,7 @@ author: wangyifan
 
 ---
 
-美国大选终于落幕了，我没太关注，不过有几件事我印象比较深刻：
+上周美国大选终于落幕了，我没太关注，不过有几件事我印象比较深刻：
 
 - 在第一次公开辩论后，twitter和主流媒体分别对此次辩论做了调查！twitter显示川普赢了，而主流媒体显示希拉里赢了。
 - 主流媒体，各大财团公开支持希拉里。而只有一家媒体公开支持川普
@@ -27,6 +27,8 @@ author: wangyifan
 
 - **合法期望**：买彩票中奖并不是从道德上就应该中奖，而是一个合法的期望
 - **道义应得**：竞技比赛中长期刻苦训练最后获得冠军的一方是道义应得
+
+<!-- more -->
 
 (合法期望，道义应得，参考自[知乎答案](https://www.zhihu.com/question/20995916/answer/21332600)，如想详细了解，请访问知乎，这里不讨论这个)
 
@@ -47,7 +49,7 @@ author: wangyifan
 
 什么是民意？**人民群众的共同的、普遍的思想或意愿**!通俗来说就是大部分人的看法！
 
-剧中讨论的问题就是，大部分人的观点或看法就是正确的吗？
+剧中讨论的问题就是，**大部分人的观点或看法就是正确的吗？**
 
 古美门在最终审判中给出了如下陈述:
 
@@ -59,12 +61,32 @@ author: wangyifan
 
 我想这就是编剧的观点吧！
 
-回到美国大选！各大媒体、各大财团都明确支持希拉里，调查显示也表明希拉里的支持率高，希拉里就是所谓的民意所向吧？
+回到美国大选！各大媒体、各大财团都明确支持希拉里，调查显示也表明希拉里的支持率高，希拉里就是所谓的民意所向吧？而川普不就是现实版的安藤贵和？
 
-而最终川普当选了，违背民意了，民众就不干了！开始游行了！在这件事上，川普和安藤处境是一样的！一个是富有，漂亮的狐狸精;一个是有钱的土鳖！
+而最终川普当选了，违背民意了，民众就不干了！开始游行了！恰恰印证了上面古美门的话：**真正的恶魔，正是无限膨胀的民意!**
 
-这又回到了上面的问题：**公正**
+**民意**影响了**公正**
+
+我们再**公正**上！
 
 # 公正
 
-希拉里当选，是**合法期望**还是**道义应得**呢？
+民众为什么游行？他们认为川普不应该被选为总统，希拉里才应该当选！
+
+我们先撇开这些，来看川普和希拉里。他们肯定都希望自己能当选总统吧？要不费这么大劲干嘛？这对他们来说应该是**合法期望**！再看川普当选后的民众反应，他们认为希拉里没有获得**道义应得**！
+
+回想一下我们听得比较多的话，大概是这样的：
+
+- 好好学习，将来能找个好工作
+- 努力工作，将来迎娶白富美
+- ...
+
+模式大概就是“做了什么，就能得到什么”！典型的**道义应得**！对于这样的人，如果成功了，大家认为是应得的，而失败了，则替他们惋惜！而如果有人天天想着“我要中500w”，然后居然中了！大家的反应应该是“靠，走狗屎运了”！
+
+而川普的胜利，恰恰就是某些人眼里所谓的“狗屎运”！这突破了我们所认知的所谓“公正”！活脱脱现实版的李狗嗨啊！
+
+# 最后
+
+川普这个总统是美国大选所选出来的，不可能因为不符合“民意”就作废！
+
+建立在“民意”之上的“公正”就是狗屎！
