--- a/source/_posts/think/2016-11-13-vote.md
+++ b/source/_posts/think/2016-11-13-vote.md
@@ -53,11 +53,13 @@ author: wangyifan
 
 古美门在最终审判中给出了如下陈述:
 
-*真正的恶魔，正是无限膨胀的民意，是坚信自己是善人，对落入阴沟的肮脏野狗进行群殴的善良的市民。
+```
+真正的恶魔，正是无限膨胀的民意，是坚信自己是善人，对落入阴沟的肮脏野狗进行群殴的善良的市民。
 
 要是民意想判一个人死刑，那就判吧，因为说到底这一系列官司不过就是一场以绞死讨厌鬼为目的的国民运动，为了给自己无聊的人生消愁解闷的运动。
 
-如果民意可以决定一切，那就不需要这种拘泥于形式的建筑与郑重的手续，也不需要一脸傲慢的老头子和老太婆。“下判决”绝不是国民的调查问卷，而是法官决定的。*
+如果民意可以决定一切，那就不需要这种拘泥于形式的建筑与郑重的手续，也不需要一脸傲慢的老头子和老太婆。“下判决”绝不是国民的调查问卷，而是法官决定的。
+```
 
 我想这就是编剧的观点吧！
 
@@ -67,7 +69,7 @@ author: wangyifan
 
 **民意**影响了**公正**
 
-我们再**公正**上！
+我们再回到**公正**上！
 
 # 公正
 
