--- a/source/_posts/think/2016-11-21-cost.md
+++ b/source/_posts/think/2016-11-21-cost.md
@@ -5,15 +5,28 @@ categories: [think]
 tags: [think,随笔]
 avatarimg: "/img/head.jpg"
 author: wangyifan
-published: false
 
 ---
 
-“能用钱解决的问题都不是问题，问题是我没钱”！这个段子，相信大家都不陌生！
+# 时间是有成本的
 
-以前我也只是把它当作个段子来看。但是现在看来，这句话其实是句大实话！我指的是**能用钱解决的问题都不是问题**这句!虽然后半句也基本属实!
+大家都听说过“天下没有免费的午餐”这句话！这里所说的免费并不是金钱上的免费，而是**机会成本**！
+
+- **机会成本**：指为了得到某种东西而所要放弃另一些东西的最大价值
+
+用上面的话来解释机会成本，就是说，你吃午餐的成本不是你为午餐所花费的钱是多少，而是你吃饭所花费的时间，如果用来做其他事情，这个事情的最大价值是多少，你吃饭的成本就是多少！
+
+再具体点，你本来想去买彩票的，但是肚子实在太饿了，就花10块钱去吃了个饭，由于吃饭你没买彩票，而你所要买的号码中了500w！那你这顿饭的成本就是500W！！！
+
+从这个角度看的话，你是否能理解，花几十万和巴菲特吃饭的人了？
+
+所以说，时间是有成本的！
+
+<!-- more -->
 
 # 负罪感
+
+再举一个大家熟悉的例子！
 
 相信大家在学生时代都有过这样的经历！一大早下定决心：“今天我要好好学习”！学了没几分钟，然后开始刷微博、刷朋友圈！一天就这么过去了，然后带着强烈的负罪感睡觉了！睡之前暗自下决定：“明天不能再这样了，一定要好好学习”！然后，第二天照旧！
 
@@ -25,7 +38,7 @@ published: false
 
 我们就从大学开始看起，因为之前的时间支配都还是父母帮忙决策！而大学是我们开始自己决定时间的使用！
 
-回想一下，你在大学里是不是有大把大把的时间可以干自己喜欢的事情！大学里课程安排要比高中轻松很多，甚至不想上课了，请室友帮忙点个到就行！而到了寒暑假，就更high了！一到两个月的自由支配时间！所以这个时候，你的时间成本其实是比较低的！这个时候你的自由支配时间可以按周，甚至月来计算！
+回想一下，你在大学里是不是有大把大把的时间可以干自己喜欢的事情！大学里课程安排要比高中轻松很多，甚至不想上课了，请室友帮忙点个到就行！而到了寒暑假，就更high了！一到两个月的自由支配时间！所以这个时候，你的时间成本其实是比较低的！这个时候你的自由支配时间可以按周、甚至月来计算！
 
 但是随着你进入社会，开始工作了，你会发现你整片整片的时间越来越少！首先，就是寒暑假没了！其次，可能还要频繁加班！还有，你需要谈谈恋爱吧，需要联络联络感情吧？这时，周末可能就成了你唯一能有自由支配时间的时候了！这个时候你的自由支配时间可能只能按天来算了！
 
@@ -33,14 +46,34 @@ published: false
 
 # 为时间买单
 
-随着时间成本的大幅提高，你为了能获得自由支配时间，你会选择付钱！比如：以前在大学里，如果电脑出了问题，第一反应是自己先捣鼓捣鼓，说不定能捣鼓好呢！而现在你的第一反应应该是直接丢给维修人员了吧？
+随着时间成本的大幅提高，你为了能获得自由支配时间，你会选择付钱！比如：以前在大学里，如果电脑出了问题，第一反应是自己先捣鼓捣鼓，说不定能捣鼓好呢！而现在你的第一反应应该是直接丢给维修人员了吧？回想一下，类似的事情是否有很多？
 
-类似的，有些人觉得一些有钱人花个几万甚至几十万买个包、买套西装太奢侈了，纯粹就是炫富！如果这些钱都是他们自己赚的，那我认为那是因为他们的时间成本很高，买这些名牌能降低时间成本的消耗！因为名牌的质量相对都较高，有很好的售后服务等，能节约很多时间！
+如果你站在现在的角度去看过去的你，是否觉得过去的你有些傻？如果你站在过去的角度去看现在的你，是否也觉得现在的你有些傻？
 
-# 沉没成本
+# 物以稀为贵
 
-时间成本是个**沉没成本**！
+类似的，有些人觉得一些有钱人花个几万甚至几十万买个包、买套西装太奢侈了(还有前面的和巴菲特吃饭)，纯粹就是炫富！很可能就是因为他们的时间成本很高，买这些名牌能降低时间成本的消耗！因为名牌的质量相对都较高，有很好的售后服务等，能节约很多时间！
+
+# 得到APP与精读
+
+得到APP是罗辑思维推出的学习类付费APP，主要功能是将书读给用户听，节约用户读书的时间！精读微信公众帐号也推出了类似服务！
+
+这种付费服务方式能够实行，就是由于时间成本越来越高！但个人认为还是需要挤出时间来读好的原书！因为精读出的内容都是经过人为过滤的，别人认为没用的东西，可能对你却有很高的价值！同时，过滤过的内容都多少带有个人主观偏向，可能有失偏颇！**能读一手资料就尽量读一手资料**！
+
+如果是要扩大知识广度，这种花钱的方式，不失为一个好方法！
+
+# 另一个角度看时间成本
+
+时间成本越来越高的另一个原因是：时间成本是个**沉没成本**！
 
 - **沉没成本**:是已经付出且不可收回的成本!
 
-活在当下，展望未来！懊恼过去，一点用都没有！
+时间流逝后是没法收回的，每个人都一样！且每个人的时间长度都相同，在一件事上花费的时间上多了，相对的在另一件事上花费的时间就少了！而如果你想同时在多件事上都花些时间，那只能花钱买了(前面说的几万买包，花钱和巴菲特吃饭，花钱让人给你读书都是为了节约时间)！从这个角度来看“能用钱解决的问题都不是问题”这句话，还是很有道理的！
+
+由于时间是沉没成本，所以不要太纠结于过去！举个例子：你买了一杯星巴克的咖啡，发现太TM难喝了！你是喝呢？还是流着泪把它喝完呢？你买了咖啡后是不能退的，买咖啡的钱就是沉默成本了，你喝不喝这个钱都已经花了，是要不回来的，所以不要纠结了，难喝就扔了，何必花钱买难受呢？
+
+郭德纲在他的相声里也说过类似的段子：“大家都是买票来的，买的就是个乐呵，你500块钱已经花了，该乐就乐！你盯着500块钱看又不会乐，你要真乐了，你这病500块钱治不好”！
+
+所以，对于该花钱的地方，还是该舍得花钱！至于什么是该花钱的地方，每个人看法不同！我会花在可积累的地方，把不可积累的时间转化为可积累的东西，比如知识，见识，亲情，友情等！
+
+活在当下，着眼未来，才是正确的姿势！懊恼过去，是很不划算的买卖！
