--- a/source/_posts/think/2016-11-27-lunch.md
+++ b/source/_posts/think/2016-11-27-lunch.md
@@ -30,6 +30,11 @@ author: wangyifan
 
 据说这次还动用了总部的非物流人员去送货，就这物流算法，一盒彩笛卷一个包裹，多少人也不够送的啊！！！
 
+这也应了“不要做自己不懂的事情”这句话！从物流可以看出来，苏宁的物流思维还是在家电上，因为家电大多体积都较大，一般都是一件一件的包装，然后整体配送！而苏宁超市卖的都是小件，一个客户可能会买很多件，但是苏宁物流系统里应该对这种需求支持得很不好，所以才导致了现在的问题！
+
+我赞同“不要做自己不懂的事情”的观点，但是要换个说法：“一件事情，在自己懂之前不要做”！有什么区别？看上面步步高的例子！
+
+对苏宁来说，他就是没有理清家电配送和小件配送的区别，导致了这次营销的失败（至少成功度大打折扣）！
 
 # 永远不要做空股票
 
